# glove_controlled_robot_hand

./: README.md
Receiver/: CMakeLists.txt  multicore_dds_receiver.c
Transmitter/: multicore_dds_transmitter.c
